--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context = ".modules.signup.SignUpActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
@@ -49,17 +51,10 @@
                         android:hint="@string/password"/>
                 </android.support.design.widget.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/goto_sign_up_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/colorPrimary"
-                    android:paddingTop="@dimen/dimen_5dp"
-                    android:text="@string/no_account_goto_sign_up"/>
             </LinearLayout>
 
         </ScrollView>
+
 
 
 
