--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_alignParentTop="true"
-            android:text="Simple Chat"
+            android:text="@string/app_name"
             android:textColor="#9fffffff"
             android:textSize="30sp"
             android:textStyle="italic"
