--- a/app/src/main/res/layout/layout_appbar.xml
+++ b/app/src/main/res/layout/layout_appbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appbar_layout"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/transparent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,10 +14,10 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/head_view"
-            android:visibility="gone"
             app:cardBackgroundColor="@color/colorPrimaryDark"
             app:cardElevation="@dimen/dimen_4dp"
             app:cardCornerRadius="0dp"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="300dp">
             <RelativeLayout
@@ -38,13 +38,14 @@
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/dimen_32dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="@dimen/dimen_12dp"
+                    android:gravity="center"
                     android:layout_marginBottom="@dimen/dimen_12dp"
                     android:textColor="#9fffffff"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/size_18sp"
                     android:text="Jinphy"/>
 
             </RelativeLayout>
