--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#4E342E</color>
     <color name="white">#ffffffff</color>
     <color name="half_alpha_gray">#7f333333</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
