--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="dimen_10dp">10dp</dimen>
     <dimen name="dimen_4dp">4dp</dimen>
     <dimen name="dimen_12dp">12dp</dimen>
+    <dimen name="dimen_32dp">32dp</dimen>
+    <dimen name="size_18sp">18sp</dimen>
 </resources>
