--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="dimen_12dp">12dp</dimen>
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="size_18sp">18sp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
 </resources>
