--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,144 +1,149 @@
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context="com.example.jinphy.simplechat.modules.main.MainFragment">
 
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"/>
 
-        android:layout_weight="1"/>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/bottom_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="20dp">
+        android:layout_height="match_parent"
+        android:gravity="bottom">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:orientation="horizontal">
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="20dp">
 
             <LinearLayout
-                android:id="@+id/btn_msg"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/btn_msg_icon"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/btn_msg"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_msg_open_24dp"/>
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/btn_msg_title"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/btn_msg_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_msg_open_24dp"/>
+
+                    <TextView
+                        android:id="@+id/btn_msg_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/colorAccent"
+                        android:text="消息"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btn_friends"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:textSize="12sp"
-                    android:textColor="@color/colorAccent"
-                    android:text="消息"/>
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/btn_friends_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_friends_close_24dp"/>
+
+                    <TextView
+                        android:id="@+id/btn_friends_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/half_alpha_gray"
+                        android:text="@string/friends"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btn_routine"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/btn_routine_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_routine_close_24dp"/>
+
+                    <TextView
+                        android:id="@+id/btn_routine_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/half_alpha_gray"
+                        android:text="@string/routine"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btn_self"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/btn_self_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_self_close_24dp"/>
+
+                    <TextView
+                        android:id="@+id/btn_self_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/half_alpha_gray"
+                        android:text="@string/self"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/btn_friends"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/btn_friends_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_friends_close_24dp"/>
+        </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:id="@+id/btn_friends_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:textSize="12sp"
-                    android:textColor="@color/half_alpha_gray"
-                    android:text="@string/friends"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/btn_routine"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/btn_routine_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_routine_close_24dp"/>
-
-                <TextView
-                    android:id="@+id/btn_routine_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:textSize="12sp"
-                    android:textColor="@color/half_alpha_gray"
-                    android:text="@string/routine"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/btn_self"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/btn_self_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_self_close_24dp"/>
-
-                <TextView
-                    android:id="@+id/btn_self_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:textSize="12sp"
-                    android:textColor="@color/half_alpha_gray"
-                    android:text="@string/self"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+    </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
 
-
-</LinearLayout>
+</FrameLayout>
