--- a/app/src/main/res/layout/fragment_self.xml
+++ b/app/src/main/res/layout/fragment_self.xml
@@ -1,120 +1,82 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                tools:context="com.example.jinphy.simplechat.modules.main.self.SelfFragment">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.jinphy.simplechat.modules.main.self.SelfFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:padding="@dimen/dimen_5dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/dimen_5dp">
 
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/dimen_5dp"
+            app:cardElevation="@dimen/dimen_2dp"
+            app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            app:cardCornerRadius="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/dimen_2dp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-
-        </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
 
 
-</ScrollView>
+</LinearLayout>
