--- a/app/src/main/res/layout/fragment_routine.xml
+++ b/app/src/main/res/layout/fragment_routine.xml
@@ -8,6 +8,7 @@
     <ScrollView
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="?attr/actionBarSize"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <GridLayout
