--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -58,7 +58,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="bottom"
                 android:clickable="true"
-                android:src="@drawable/btn_more"
+                android:src="@drawable/ic_add_24dp"
                 app:civ_border_width="1dp"
                 app:civ_border_color="@color/colorAccent"
 
