--- a/app/src/main/res/layout/main_tab_routine_card_view_item.xml
+++ b/app/src/main/res/layout/main_tab_routine_card_view_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/card_view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
+
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/dimen_7dp"
     app:cardUseCompatPadding="true"
@@ -33,8 +34,8 @@
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:text="@string/social"
-            android:layout_width="@dimen/dimen_48dp"
+            android:text="@string/weather"
+            android:layout_width="wrap_content"
             android:layout_height="20dp"/>
 
     </LinearLayout>
