--- a/app/src/main/res/layout/fragment_active_zoom.xml
+++ b/app/src/main/res/layout/fragment_active_zoom.xml
@@ -35,31 +35,62 @@
 
             <View
                 android:id="@+id/foreground_view"
+                android:alpha="0"
+                android:background="#9f000000"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
         </FrameLayout>
 
     </android.support.v7.widget.CardView>
 
-    <RelativeLayout
-        android:id="@+id/tool_bar"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/status_and_tool_bar"
+        android:orientation="vertical"
         android:alpha="0"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="@dimen/status_bar_height">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="@dimen/tool_bar_height"
-            android:layout_height="@dimen/tool_bar_height"
-            android:clickable="true"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/btn_alpha"
-            android:padding="@dimen/dimen_14dp"
-            android:src="@drawable/ic_arrow_left_24dp"/>
+        <View
+            android:background="#4f000000"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/status_bar_height"/>
+        <RelativeLayout
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+            <ImageView
+                android:id="@+id/btn_back"
+                android:layout_width="@dimen/tool_bar_height"
+                android:layout_height="@dimen/tool_bar_height"
+                android:clickable="true"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/btn_alpha"
+                android:padding="@dimen/dimen_14dp"
+                android:src="@drawable/ic_arrow_left_24dp"/>
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_edit_24dp"
+            android:layout_gravity="bottom|right"
+            app:backgroundTint="@color/white"
+            app:rippleColor="@color/colorAccent"
+            app:fabSize="normal"/>
+
+    </android.support.design.widget.CoordinatorLayout>
+
 
 
 
