--- a/app/src/main/res/layout/main_tab_msg_item.xml
+++ b/app/src/main/res/layout/main_tab_msg_item.xml
@@ -6,8 +6,10 @@
     android:id="@+id/item_view"
     android:layout_width="wrap_content"
     android:layout_height="80dp"
+    android:layout_marginLeft="@dimen/dimen_5dp"
+    android:layout_marginRight="@dimen/dimen_5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="2dp"
+    app:cardElevation="1dp"
     app:contentPadding="12dp"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="3dp">
