--- a/app/src/main/res/layout/fragment_active_zoom.xml
+++ b/app/src/main/res/layout/fragment_active_zoom.xml
@@ -1,8 +1,11 @@
 <FrameLayout
+    android:id="@+id/root_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
+    android:elevation="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.jinphy.simplechat.modules.active_zoom.ActiveZoneFragment">
 
@@ -21,6 +24,7 @@
         app:cardCornerRadius="@dimen/dimen_0dp"
         app:cardMaxElevation="@dimen/dimen_8dp"
         app:cardElevation="@dimen/dimen_0dp"
+        app:cardBackgroundColor="@color/white"
         android:layout_height="@dimen/dimen_300dp">
         <FrameLayout
             android:layout_width="match_parent"
