--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="chat_receive_msg_pressed">#9f999999</color>
     <color name="chat_send_btn_normal">#7f4E342E</color>
     <color name="half_alpha_black">#7f000000</color>
+    <color name="background">#fff7f7f7</color>
 </resources>
