--- a/app/src/main/res/layout/main_tab_routine_item.xml
+++ b/app/src/main/res/layout/main_tab_routine_item.xml
@@ -2,12 +2,13 @@
 <android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
 
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/dimen_7dp"
     app:cardUseCompatPadding="true"
-    app:cardElevation="@dimen/dimen_3dp"
+    app:cardElevation="@dimen/dimen_2dp"
     android:clickable="true"
     android:layout_width="120dp"
     android:layout_height="120dp">
@@ -23,7 +24,7 @@
 
         <ImageView
             android:id="@+id/icon_view"
-            android:src="@drawable/ic_active_zoom_24dp"
+            tools:src="@drawable/ic_active_zoom_24dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="@dimen/dimen_48dp"
@@ -35,7 +36,7 @@
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:text="@string/routine_weather"
+            tools:text="@string/routine_weather"
             android:layout_width="wrap_content"
             android:layout_height="20dp"/>
 
