--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,21 +16,10 @@
 
         <FrameLayout
             android:id="@+id/fragment"
+            android:layout_marginTop="@dimen/tool_bar_height"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_ok_24dp"
-            android:tint="@color/colorAccent"
-            app:backgroundTint="@color/white"
-            app:rippleColor="@color/colorAccent"
-            app:fabSize="normal"
-            app:layout_anchor="@id/fragment"
-            app:layout_anchorGravity="bottom|right|end"/>
     </android.support.design.widget.CoordinatorLayout>
 
     <include layout="@layout/layout_appbar"/>
