--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,57 +7,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context = ".modules.signup.SignUpActivity">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="10dp"
-        app:contentPadding="10dp"
-        app:cardUseCompatPadding="true"
-        android:layout_centerInParent="true">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
+        <android.support.v7.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="500dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="10dp"
+            app:contentPadding="10dp"
+            app:cardUseCompatPadding="true"
+            android:layout_centerInParent="true">
+
+            <com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout
+                android:id="@+id/vertical_steps_form"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
+                android:layout_height="match_parent">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/dimen_30dp">
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/account_text"
+            </com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout>
+
+
+
+            <!--
+
+                    <ScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/account"/>
+                        android:layout_height="match_parent">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_gravity="center_vertical">
 
-                </android.support.design.widget.TextInputLayout>
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/dimen_30dp">
+                                <android.support.design.widget.TextInputEditText
+                                    android:id="@+id/account_text"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/account"/>
 
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/password_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"/>
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
+                            </android.support.design.widget.TextInputLayout>
 
 
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="50dp">
+
+                                <android.support.design.widget.TextInputEditText
+                                    android:id="@+id/password_text"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/password"/>
+                            </android.support.design.widget.TextInputLayout>
+
+                        </LinearLayout>
+
+                    </ScrollView>
+            -->
 
 
-    </android.support.v7.widget.CardView>
+
+
+        </android.support.v7.widget.CardView>
 
 </RelativeLayout>
