--- a/app/src/main/res/layout/text_input_layout.xml
+++ b/app/src/main/res/layout/text_input_layout.xml
@@ -1,15 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.TextInputLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/dimen_30dp">
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/input_text"
-        android:maxLines="1"
-        android:minWidth="200dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-</android.support.design.widget.TextInputLayout>
+    <LinearLayout
+        android:id="@+id/input_layout"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_30dp">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_text"
+                android:maxLines="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/verification_code_button"
+            android:text="@string/get_verification_code"
+            android:layout_marginLeft="@dimen/dimen_10dp"
+            android:layout_marginTop="17dp"
+            android:gravity="center"
+            android:background="@drawable/verification_code_button_background"
+            android:textColor="@color/white"
+            android:elevation="@dimen/dimen_3dp"
+            android:paddingLeft="@dimen/dimen_10dp"
+            android:paddingRight="@dimen/dimen_10dp"
+            android:visibility="gone"
+            android:clickable="true"
+            android:layout_width="90dp"
+            android:layout_height="35dp"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/verify_successfully_view"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            app:srcCompat="@drawable/ic_certificates_24dp"
+            android:tint="#AEEA00"
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
+        <TextView
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="@dimen/dimen_5dp"
+            android:textColor="@color/colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="已通过验证！"/>
+    </LinearLayout>
+
+
+</LinearLayout>
+
+
