--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="dimen_14dp">14dp</dimen>
     <dimen name="dimen_58dp">58dp</dimen>
     <dimen name="size_16sp">16sp</dimen>
+    <dimen name="dimen_20dp">20dp</dimen>
 </resources>
