--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -2,51 +2,53 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context = ".modules.signup.SignUpActivity">
+    tools:context=".modules.signup.SignUpActivity">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="330dp"
+        android:layout_height="550dp"
+        android:layout_centerInParent="true"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="@dimen/dimen_5dp"
+        app:cardUseCompatPadding="true">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="330dp"
-            android:layout_height="550dp"
-            app:cardCornerRadius="10dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardElevation="@dimen/dimen_5dp"
-            app:cardUseCompatPadding="true"
-            android:layout_centerInParent="true">
-            <LinearLayout
-                android:orientation="vertical"
+        <LinearLayout
+            android:id="@+id/form_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tool_bar_height"
+                android:background="@color/color_red_D50000"
+                android:elevation="@dimen/dimen_1dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="新建账号"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/size_18sp"/>
+
+            </RelativeLayout>
+
+            <com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout
+                android:id="@+id/vertical_steps_form"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <RelativeLayout
-                    android:background="@color/color_red_D50000"
-                    android:layout_width="match_parent"
-                    android:elevation="@dimen/dimen_1dp"
-                    android:layout_height="@dimen/tool_bar_height">
+            </com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout>
 
-                    <TextView
-                        android:text="新建账号"
-                        android:layout_centerInParent="true"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/size_18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </RelativeLayout>
-
-                <com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout
-                    android:id="@+id/vertical_steps_form"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout>
-
-            </LinearLayout>
+        </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
